third_party/move/move-compiler-v2/tests/signed-int/valid/valid_ref_resource.exp

Diagnostics:
error: invalid number literal
   ┌─ tests/signed-int/valid/valid_ref_resource.move:41:31
   │
41 │         let s1 = S1 {x: 1, y: -1, z: -2};
   │                               ^^ Invalid number literal. The given literal cannot fit into the largest possible integer type, 'u256'

error: invalid number literal
   ┌─ tests/signed-int/valid/valid_ref_resource.move:41:38
   │
41 │         let s1 = S1 {x: 1, y: -1, z: -2};
   │                                      ^^ Invalid number literal. The given literal cannot fit into the largest possible integer type, 'u256'

error: invalid number literal
   ┌─ tests/signed-int/valid/valid_ref_resource.move:48:31
   │
48 │         let s1 = S1 {x: 1, y: -1, z: -2};
   │                               ^^ Invalid number literal. The given literal cannot fit into the largest possible integer type, 'u256'

error: invalid number literal
   ┌─ tests/signed-int/valid/valid_ref_resource.move:48:38
   │
48 │         let s1 = S1 {x: 1, y: -1, z: -2};
   │                                      ^^ Invalid number literal. The given literal cannot fit into the largest possible integer type, 'u256'
